[package]
name = "rust_lib_flutter_rust_transceiver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0-dev.33", features = ["chrono", "uuid", "backtrace"] }

[build-dependencies]
flutter_rust_bridge_codegen = "=2.0.0-dev.33"
anyhow = { version = "1.0.82", features = ["backtrace"] }